<resources>
    <string name="app_name">To Do List</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="todo_input_suggestion">Type todo here</string>
    <string name="create_todo_text">Create</string>
    <string name="delete_todo_text">Delete</string>
    <string name="delete_todo">Delete</string>
    <string name="todo_priority">Priority:</string>
    <string name="todo_label">Due Date:</string>
    <string name="todo_details_subtask_input">Type subtask here</string>
    <string name="todo_details_description_hint">Write the to do description here</string>
    <string name="title_activity_todo_details">TodoDetailsActivity</string>
    <string name="todo_details_save">Save</string>
</resources>
